--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "foundation": "^4.2.1",
+    "googlemaps": "^1.4.0",
+    "handlebars": "^4.0.5",
     "jade": "~1.11.0",
+    "mongoose": "^4.4.10",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   }
