--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "bower": "^1.7.9",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "dota2api": "^0.1.1",
     "express": "~4.13.1",
-    "foundation": "^4.2.1",
     "googlemaps": "^1.4.0",
-    "handlebars": "^4.0.5",
     "jade": "~1.11.0",
     "mongoose": "^4.4.10",
     "morgan": "~1.6.1",
+    "passport": "^0.3.2",
     "serve-favicon": "~2.3.0"
   }
 }
