--- a/package.json
+++ b/package.json
@@ -6,17 +6,27 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^1.5.2",
+    "bcrypt-nodejs": "latest",
     "body-parser": "~1.13.2",
     "bower": "^1.7.9",
+    "connect-flash": "~0.1.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "dota2api": "^0.1.1",
     "express": "~4.13.1",
+    "express-session": "~1.0.0",
     "googlemaps": "^1.4.0",
     "jade": "~1.11.0",
+    "method-override": "~1.0.0",
     "mongoose": "^4.4.10",
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
+    "passport-facebook": "~1.0.2",
+    "passport-google-oauth": "~0.1.5",
+    "passport-local": "~0.1.6",
+    "request": "^2.72.0",
+    "request-promise": "^3.0.0",
     "serve-favicon": "~2.3.0"
   }
 }
