--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "express": "~4.13.1",
     "express-session": "~1.0.0",
     "googlemaps": "^1.4.0",
-    "jade": "~1.11.0",
+    "jstransformer": "^1.0.0",
     "method-override": "~1.0.0",
     "mongoose": "^4.4.10",
     "morgan": "~1.6.1",
@@ -25,6 +25,7 @@
     "passport-facebook": "~1.0.2",
     "passport-google-oauth": "~0.1.5",
     "passport-local": "~0.1.6",
+    "pug": "^2.0.0-beta11",
     "request": "^2.72.0",
     "request-promise": "^3.0.0",
     "serve-favicon": "~2.3.0"
