--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "start http://localhost:3000 & node bin/www"
   },
   "dependencies": {
     "async": "^1.5.2",
